# vibe_de

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/scraper/: Holdings details - Vanguard S&P 500 Index ETF - 2026-01-31.xlsx  scraper_config.py  stock_vfv_flow.py  util.py
src/sync_jobs/: kb_sync.py
