[project]
name = "vibe-de"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.39",
    "dotenv>=0.9.9",
    "fastexcel>=0.19.0",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.6",
    "polars>=1.37.1",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
